--- a/_includes/menu-items.html
+++ b/_includes/menu-items.html
@@ -10,7 +10,7 @@
         <li><a href="{{ site.baseurl }}/sobre/">sobre</a></li>
         <li><a href="{{ site.baseurl }}/quem-somos/">quem somos</a></li>
         <li><a href="{{ site.baseurl }}/noticias/">notícias</a></li>
-        <li><a href="{{ site.baseurl }}/doe/">doe</a></li>
+        <li><a href="{{ site.baseurl }}/biblioteca/">biblioteca</a></li>
         <li><a href="{{ site.baseurl }}/transparencia/">Transparência</a></li>
     {% endcase %}
   </ul>
