--- a/_includes/share.html
+++ b/_includes/share.html
@@ -10,9 +10,13 @@
      href="https://www.facebook.com/sharer/sharer.php?u={{ thisURL }}">
       <i class="fa fa-facebook fa-1_5x" aria-hidden="true"></i>
     </a>
-    <a title="{{ share }}: Twitter" target="_blank"
+    <!-- <a title="{{ share }}: Twitter" target="_blank"
      href="https://twitter.com/share?url={{ thisURL }}">
       <i class="fa fa-twitter fa-1_5x" aria-hidden="true"></i>
+    </a> -->
+    <a title="{{ share }}: LinkedIn" target="_blank" 
+     href="https://www.linkedin.com/sharing/share-offsite/?url={{ thisURL }}">
+      <i class="fa fa-linkedin-square fa-1_5x" aria-hidden="true"></i>
     </a>
   </div>
 </div>
