adicionando paginas de listagem para biblioteca e participaões em en/pt

--- a/_includes/menu-items.html
+++ b/_includes/menu-items.html
@@ -5,6 +5,7 @@
         <li><a href="{{ site.baseurl }}/about/">about</a></li>
         <li><a href="{{ site.baseurl }}/who-we-are/">who we are</a></li>
         <li><a href="{{ site.baseurl }}/news/">news</a></li>
+        <li><a href="{{ site.baseurl }}/library/">library</a></li>
         <li><a href="{{ site.baseurl }}/donate/">donate</a></li>
       {% else %}
         <li><a href="{{ site.baseurl }}/sobre/">sobre</a></li>
@@ -23,7 +24,7 @@
         <li><a href="{{ site.baseurl }}/en/encontrada/">encontrada</a></li>
         <li><a href="{{ site.baseurl }}/en/residencia/">residency</a></li>
         <li><a href="{{ site.baseurl }}/en/labs/">labs</a></li>
-        <li><a href="{{ site.baseurl }}/siloescola/">silo escola</a></li>
+        <li><a href="{{ site.baseurl }}/en/siloescola/">silo school</a></li>
       {% else %}
         <li><a href="{{ site.baseurl }}/caipiratechlab/">caipiraTech lab</a></li>
         <li><a href="{{ site.baseurl }}/encontrada/">encontrada</a></li>
