--- a/_layouts/calls.html
+++ b/_layouts/calls.html
@@ -10,6 +10,7 @@
     <div class="main-div">
 
       <section class="content-text">{{ content }}</section>
+      {% include process-calls.html %}
 
       <section class="list-wrapper">
         {% if page.lang == 'en' %}
@@ -19,10 +20,8 @@
         {% endif %}
 
         <div class="home-list">
-          {% assign open = site.posts | where:"lang", page.lang | where:"category", "callopen" %}
-          {% assign open_count = open | size %}
 
-          {% if open_count == 0 %}
+          {% if open.size == 0 %}
             {% if page.lang == 'en' %}
               <p>Soon!</p>
             {% else %}
@@ -49,7 +48,6 @@
         {% endif %}
 
         <div class="home-list">
-          {% assign closed = site.posts | where:"lang", page.lang | where:"category", "callclosed" %}
           {% for post in closed %}
             {% assign pCover = site.baseurl | append: '/' | append: post.cover %}
             <a class="list-item" href="{{ site.baseurl }}{{ post.url }}">
