--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,8 +11,9 @@
     <div class="main-div">
       <section class="content-text">
         {{ content }}
-        {% assign opencalls = site.posts | where:"lang", page.lang | where:"category", "callopen" | size %}
-        {% if opencalls > 0 %}
+
+        {% include process-calls.html %}
+        {% if open.size > 0 %}
           <br>
           {% if page.lang == 'en' %}
             <a class="nav-call" href="{{ site.baseurl }}/open-calls">Open Calls</a>
