--- a/_includes/menu-items.html
+++ b/_includes/menu-items.html
@@ -6,7 +6,7 @@
         <li><a href="{{ site.baseurl }}/who-we-are/">who we are</a></li>
         <li><a href="{{ site.baseurl }}/news/">news</a></li>
         <li><a href="{{ site.baseurl }}/library/">library</a></li>
-        <li><a href="{{ site.baseurl }}/donate/">donate</a></li>
+        <li><a href="{{ site.baseurl }}/transparency/">Transparency</a></li>
       {% else %}
         <li><a href="{{ site.baseurl }}/sobre/">sobre</a></li>
         <li><a href="{{ site.baseurl }}/quem-somos/">quem somos</a></li>
