--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 {% if page.permalink == '/' or page.permalink == '/en/' %}
   <div class="footer">
-    {% assign app_sup = 'Recursos:' %}
+    {% assign app_sup = 'Recursos' %}
     {% if page.lang == 'en' %}
       {% assign app_sup = 'Support:' %}
     {% endif %}
@@ -32,6 +32,9 @@
   <img src="{{ site.baseurl }}/media/images/silo_logo_footer.png" alt="Silo - Arte e Latitude Rural" class="logo-footer">
   <div class="footer-line">Fale com a gente: <a href="mailto:contato@silo.org.br" target="_blank">contato@silo.org.br</a></div>
   <div class="footer-line">Caixa Postal: 82230</div>
+  <div class="footer-line">CEP: 27542-090</div>
+  <div class="footer-line">Resende-RJ</div>
+
   <div class="footer-line"><a href="https://creativecommons.org/licenses/by-sa/4.0/deed.en" target="_blank" rel="license noopener noreferrer" class="cc-footer"><img src="{{ site.baseurl }}/media/images/creative-commons_cc.svg" alt=""><img src="{{ site.baseurl }}/media/images/creative-commons_by.svg" alt=""><img src="{{ site.baseurl }}/media/images/creative-commons_sa.svg" alt="">CC BY-SA 4.0</a></div>
   <!-- <a class="footer-line" href="mailto:contato@silo.org.br" target="_blank">contato@silo.org.br</a> -->
   <!-- <div class="footer-line">
