--- a/_includes/menu-items.html
+++ b/_includes/menu-items.html
@@ -8,7 +8,7 @@
         <li><a href="{{ site.baseurl }}/library/">library</a></li>
         <li><a href="{{ site.baseurl }}/transparency/">Transparency</a></li>
       {% else %}
-        <li><a href="{{ site.baseurl }}/sobre/">sobre</a></li>
+        <li><a href="{{ site.baseurl }}/sobre/">Sobre a Silo</a></li>
         <li><a href="{{ site.baseurl }}/quem-somos/">quem somos</a></li>
         <li><a href="{{ site.baseurl }}/noticias/">notícias</a></li>
         <li><a href="{{ site.baseurl }}/biblioteca/">biblioteca</a></li>
@@ -20,13 +20,13 @@
   <ul>
     {% case page.lang %}
       {% when 'en' %}
-        <li><a href="{{ site.baseurl }}/en/caipiratechlab/">caipiraTech lab</a></li>
+        <li><a href="{{ site.baseurl }}/en/caipiratechlab/">CaipiratechLAB</a></li>
         <li><a href="{{ site.baseurl }}/en/encontrada/">encontrada</a></li>
         <li><a href="{{ site.baseurl }}/en/residencia/">residency</a></li>
         <li><a href="{{ site.baseurl }}/en/labs/">labs</a></li>
         <li><a href="{{ site.baseurl }}/en/siloescola/">silo school</a></li>
       {% else %}
-        <li><a href="{{ site.baseurl }}/caipiratechlab/">caipiraTech lab</a></li>
+        <li><a href="{{ site.baseurl }}/caipiratechlab/">CaipiratechLAB</a></li>
         <li><a href="{{ site.baseurl }}/encontrada/">encontrada</a></li>
         <li><a href="{{ site.baseurl }}/residencia/">residência</a></li>
         <li><a href="{{ site.baseurl }}/labs/">laboratórios</a></li>
