--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,11 +46,11 @@
         {% endif %}
       </section>
       <section class="list-wrapper project-list">
-        {% assign projects = 'Projetos' %}
+        {% assign projects = 'Progamas' %}
         {% if page.lang == 'en' %}
           {% assign projects = 'Projects' %}
         {% endif %}
-        <h2>{{ projects }}:</h2>
+        <h2>{{ projects }}</h2>
         <!---
         {% assign project-text = 'Nossas atividades se dividem em 4 frentes de ação:' %}
         {% if page.lang == 'en' %}
