--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,14 +58,13 @@
         {% endif %}
         {{ project-text }}
         --->
-        <div class="home-list">
+        <div class="home-image-list-wrapper">
           {% assign pages = site.pages | where:"lang", page.lang %}
           {% for page in pages %}
             {% if page.path contains 'projects' %}
               {% assign pCover = site.baseurl | append: '/' | append: page.cover %}
-              <a class="list-item project-item" href="{{ site.baseurl }}{{ page.url }}">
-                <div class="list-item-image" style="background-image: url('{{ pCover }}');">
-                </div>
+              <a class="home-image-a" href="{{ site.baseurl }}{{ page.url }}">
+                <img class="home-image" src="{{ pCover }}"></img>
               </a>
             {% endif %}
           {% endfor %}
