--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -64,8 +64,7 @@
             {% if page.path contains 'projects' %}
               {% assign pCover = site.baseurl | append: '/' | append: page.cover %}
               <a class="list-item project-item" href="{{ site.baseurl }}{{ page.url }}">
-                <div class="list-item-image" style="background-image: url('{{ pCover }}');">
-                </div>
+                <img class="list-item-image" src="{{ pCover }}"></img>
               </a>
             {% endif %}
           {% endfor %}
