--- a/css/main.scss
+++ b/css/main.scss
@@ -559,13 +559,16 @@ a {
     border-radius: 5px;
     font: normal $LINK-SIZE-MOBILE $FONT-TITLE;
     text-align: center;
-    line-height: 1.2;
+    line-height: 28px;
+    font-variant: petite-caps;
     color: #fff;
     background: linear-gradient(rgba(0,0,0,0), rgba(32,32,32,0.8));
 
     @include media-query(DESKTOP) {
       padding: 12px 12%;
       font: normal $LINK-SIZE $FONT-TITLE;
+      font-variant: petite-caps;
+      line-height: 28px;
     }
   }
 
@@ -1007,4 +1010,65 @@ Media query para telas mais largas (desktops) */
   }
 }
 
+.home-banner-section {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 40px;
+  margin: 30px auto;
+  max-width: 85%;
+  
+  @media (min-width: 768px) {
+    flex-direction: row;
+  }
+}
 
+.banner-item {
+  position: relative;
+  width: 100%;
+  height: 150px;
+  overflow: hidden;
+  border-radius: 8px;
+  
+  @media (min-width: 768px) {
+    height: 180px;
+  }
+  
+  @media (min-width: 1200px) {
+    height: 200px;
+  }
+}
+
+.banner-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.banner-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: fill-content;
+  margin-inline: 20px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  span {
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 10px 20px;
+    border-radius: 4px;
+    line-height: 28px;
+    font: normal $LINK-SIZE-MOBILE $FONT-TITLE;
+    font-variant: petite-caps;
+    font-weight: bold;
+    text-align: center;
+
+    @media (min-width: 768px) {
+      font-size: $LINK-SIZE;
+    }
+  }
+}
