fix: erro portugues programas

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,7 +46,7 @@
         {% endif %}
       </section>
       <section class="list-wrapper project-list">
-        {% assign projects = 'Progamas' %}
+        {% assign projects = 'Programas' %}
         {% if page.lang == 'en' %}
           {% assign projects = 'Projects' %}
         {% endif %}
