feature: 2025-ciclo-3 - troca de fonte

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -58,7 +58,7 @@
 
 @font-face {
     font-family: Font3;
-    src: url(fonts/selected/Font3R.ttf);
+    src: url(fonts/base-mono-wide/basemonowidereg-regular.ttf);
     font-style: normal;
     font-weight: normal;
 }
