fix: layout home 2025-ciclo-3-1

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
       {% assign app_sup = 'Support:' %}
     {% endif %}
     <!-- <div class="footer-line">{{ app_sup }}</div> -->
-    <h2>{{ app_sup }}</h2>
+    <h2 class="support-title">{{ app_sup }}</h2>
     <div class="home-list">
       <a class="list-item support-item" href="https://www.ibirapitanga.org.br/" target="_blank">
       <div class="parceira-logo" style="background-image: url('{{ site.baseurl }}/media/images/logos/ibirapitanga.png');');">
