--- a/css/main.scss
+++ b/css/main.scss
@@ -458,16 +458,6 @@ a {
     }
   }
 
-  .project-item {
-    @include media-query(DESKTOP) {
-      width: 20%;
-      min-width: 150px;
-      height: 20vw;
-      min-height: 120px;
-      max-height: 230px;
-    }
-  }
-
   .support-item {
     display: flex;
     flex-direction: column;
@@ -497,24 +487,6 @@ a {
     @include media-query(DESKTOP) {
       width: 26%;
       margin: 0 auto 24px;
-    }
-  }
-
-  .list-item-image {
-    display: block;
-    position: relative;
-    width: 100%;
-    min-height: 200px;
-    border-radius: 5px;
-
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    filter: grayscale(100%);
-    transition: filter $TRANSITION-PERIOD linear;
-
-    &:hover {
-      filter: grayscale(0%);
     }
   }
 
@@ -550,28 +522,6 @@ a {
     }
   }
 
-  .list-item-title {
-    position: absolute;
-    box-sizing: border-box;
-    width: 100%;
-    bottom: 0;
-    padding: 24px 6%;
-    border-radius: 5px;
-    font: normal $LINK-SIZE-MOBILE $FONT-TITLE;
-    text-align: center;
-    line-height: 28px;
-    font-variant: petite-caps;
-    color: #fff;
-    background: linear-gradient(rgba(0,0,0,0), rgba(32,32,32,0.8));
-
-    @include media-query(DESKTOP) {
-      padding: 12px 12%;
-      font: normal $LINK-SIZE $FONT-TITLE;
-      font-variant: petite-caps;
-      line-height: 28px;
-    }
-  }
-
   .people-title {
     position: relative;
     padding: 0;
@@ -582,6 +532,47 @@ a {
     color: #000;
   }
 }
+
+.list-item-image {
+  display: block;
+  position: relative;
+  width: 100%;
+  min-height: 200px;
+  border-radius: 5px;
+
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  filter: grayscale(100%);
+  transition: filter $TRANSITION-PERIOD linear;
+
+  &:hover {
+    filter: grayscale(0%);
+  }
+}
+
+.list-item-title {
+  position: absolute;
+  box-sizing: border-box;
+  width: 100%;
+  bottom: 0;
+  padding: 24px 6%;
+  border-radius: 5px;
+  font: normal $LINK-SIZE-MOBILE $FONT-TITLE;
+  text-align: center;
+  line-height: 28px;
+  font-variant: petite-caps;
+  color: #fff;
+  background: linear-gradient(rgba(0,0,0,0), rgba(32,32,32,0.8));
+
+  @include media-query(DESKTOP) {
+    padding: 12px 12%;
+    font: normal $LINK-SIZE $FONT-TITLE;
+    font-variant: petite-caps;
+    line-height: 28px;
+  }
+}
+
 
 .people-list {
   box-sizing: border-box;
@@ -1018,25 +1009,33 @@ Media query para telas mais largas (desktops) */
   }
 }
 
-.home-banner-section {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  gap: 40px;
-  margin: 30px auto;
+.m-w-85 {
   max-width: 85%;
-  
+}
+
+.news-wrapper { 
+  max-width: 85%;
+
   @media (min-width: 768px) {
-    flex-direction: row;
+    max-width: 100%;
   }
 }
 
-.banner-item {
+.home-items-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  gap: 40px;
+  margin: 30px auto;
+}
+
+.home-item {
   position: relative;
   width: 100%;
-  height: 150px;
   overflow: hidden;
   border-radius: 8px;
+  min-width: 200px;
+  flex: 1 1 200px;
   
   @media (min-width: 768px) {
     height: 180px;
@@ -1047,6 +1046,10 @@ Media query para telas mais largas (desktops) */
   }
 }
 
+.home-card {
+  height: 200px;
+}
+
 .banner-image {
   width: 100%;
   height: 100%;
@@ -1054,16 +1057,21 @@ Media query para telas mais largas (desktops) */
   object-position: center;
 }
 
-.banner-text {
+.banner-text-wrapper {
   position: absolute;
   top: 0;
   left: 0;
-  width: fill-content;
-  margin-inline: 20px;
+  width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+  .banner-text {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-inline: auto;
+  }
   
   span {
     background-color: rgba(255, 255, 255, 0.7);
