feat: estilo cards biblioteca

--- a/_includes/menu-items.html
+++ b/_includes/menu-items.html
@@ -18,7 +18,7 @@
       {% when 'en' %}
         <li><a href="{{ site.baseurl }}/en/programs/">programas</a></li>
         <li><a href="{{ site.baseurl }}/en/siloescola/">silo school</a></li>
-        <li><a href="{{ site.baseurl }}/library/">library</a></li>
+        <li><a href="{{ site.baseurl }}/en/library/">library</a></li>
         <li><a href="{{ site.baseurl }}/news/">news</a></li>
       {% else %}
         <li><a href="{{ site.baseurl }}/programas/">programas</a></li>
