--- a/css/main.scss
+++ b/css/main.scss
@@ -543,11 +543,14 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  filter: grayscale(100%);
   transition: filter $TRANSITION-PERIOD linear;
+  filter: grayscale(0%);
 
-  &:hover {
-    filter: grayscale(0%);
+  @media (min-width: 768px) {
+    filter: grayscale(100%);
+    &:hover {
+      filter: grayscale(0%);
+    }
   }
 }
 
@@ -1022,11 +1025,13 @@ Media query para telas mais largas (desktops) */
 }
 
 .home-items-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 40px;
   margin: 30px auto;
+  @media (min-width: 768px) {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
 }
 
 .home-item {
@@ -1100,6 +1105,6 @@ Media query para telas mais largas (desktops) */
 
   @media (min-width: 768px) {
     max-width: 100%;
-    min-width: 400px;
+    min-width: 200px;
   }
 }
