fix: estilo noticias

--- a/_includes/related-news.html
+++ b/_includes/related-news.html
@@ -1,4 +1,4 @@
-<section class="list-wrapper">
+<section class="">
   {% assign news = 'Notícias Relacionadas' %}
   {% if page.lang == 'en' %}
     {% assign news = 'Related News' %}
