--- a/css/main.scss
+++ b/css/main.scss
@@ -1016,6 +1016,14 @@ Media query para telas mais largas (desktops) */
   max-width: 85%;
 }
 
+.w-80 {
+  width: 80%;
+}
+
+.m-auto {
+  margin: auto;
+}
+
 .news-wrapper { 
   max-width: 85%;
 
