feat: titulo banners uppercase

--- a/css/main.scss
+++ b/css/main.scss
@@ -1092,7 +1092,7 @@ Media query para telas mais largas (desktops) */
     border-radius: 4px;
     line-height: 28px;
     font: normal $LINK-SIZE-MOBILE $FONT-TITLE;
-    font-variant: petite-caps;
+    text-transform: uppercase;
     font-weight: bold;
     text-align: center;
 
