feat: [HOME] Alterações de Maio na versão inglês

--- a/_includes/menu-items.html
+++ b/_includes/menu-items.html
@@ -2,9 +2,8 @@
   <ul>
     {% case page.lang %}
       {% when 'en' %}
-        <li><a href="{{ site.baseurl }}/about/">about</a></li>
+        <li><a href="{{ site.baseurl }}/about/">about Silo</a></li>
         <li><a href="{{ site.baseurl }}/who-we-are/">who we are</a></li>
-        <li><a href="{{ site.baseurl }}/transparency/">Transparency</a></li>
       {% else %}
         <li><a href="{{ site.baseurl }}/sobre/">Sobre a Silo</a></li>
         <li><a href="{{ site.baseurl }}/quem-somos/">quem somos</a></li>
