--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -74,7 +74,7 @@
       <section class="list-wrapper project-list">
         {% assign projects = 'Programas' %}
         {% if page.lang == 'en' %}
-          {% assign projects = 'Projects' %}
+          {% assign projects = 'Programs' %}
         {% endif %}
         <h2>{{ projects }}</h2>
         <!---
