--- a/css/main.scss
+++ b/css/main.scss
@@ -1119,3 +1119,45 @@ Media query para telas mais largas (desktops) */
     min-width: 200px;
   }
 }
+
+.ocupa-silo-images {
+  display: grid;
+  max-width: 80%;
+  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+  justify-content: space-between;
+  justify-items: center;
+  margin: auto;
+  margin-top: 3rem;
+  gap: 10px;
+
+  @media (min-width: 1200px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  p {
+    width: 100%;
+    height: 100%;
+    max-height: 200px;
+    max-width: 280px;
+    display: flex;
+    justify-content: center;
+
+    @media (min-width: 1200px) {
+      max-height: 340px;
+      max-width: 340px;
+    }
+
+    img {
+      width: 230px;
+      height: 175px;
+      object-fit: cover;
+      border-radius: 10px;
+
+      @media (min-width: 1200px) {
+        object-fit: contain;
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+}
