feat: [HOME] Alterações de Maio na versão inglês

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="footer">
     {% assign app_sup = 'Recursos' %}
     {% if page.lang == 'en' %}
-      {% assign app_sup = 'Support:' %}
+      {% assign app_sup = 'Support' %}
     {% endif %}
     <!-- <div class="footer-line">{{ app_sup }}</div> -->
     <h2 class="support-title">{{ app_sup }}</h2>
