--- a/_includes/menu-items.html
+++ b/_includes/menu-items.html
@@ -15,7 +15,7 @@
   <ul>
     {% case page.lang %}
       {% when 'en' %}
-        <li><a href="{{ site.baseurl }}/en/programs/">programas</a></li>
+        <li><a href="{{ site.baseurl }}/en/programs/">programs</a></li>
         <li><a href="{{ site.baseurl }}/en/siloescola/">silo school</a></li>
         <li><a href="{{ site.baseurl }}/en/library/">library</a></li>
         <li><a href="{{ site.baseurl }}/news/">news</a></li>
