--- a/css/main.scss
+++ b/css/main.scss
@@ -1127,6 +1127,8 @@ Media query para telas mais largas (desktops) */
   justify-content: space-between;
   justify-items: center;
   margin: auto;
+  margin-top: 30px;
+
   gap: 10px;
 
   @media (min-width: 1200px) {
@@ -1140,6 +1142,7 @@ Media query para telas mais largas (desktops) */
     max-width: 280px;
     display: flex;
     justify-content: center;
+    margin-block: 0px;
 
     @media (min-width: 1200px) {
       max-height: 340px;
