fix: style footer logos

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 
     <div class="footer-cultura-wrapper">
       <a class="footer-cultura-a" href="#">
-        <img class="footer-cultura-img" src="{{ site.baseurl }}/media/images/logos/footer/selo_cultura_viva.svg" alt="Selo Cultura Viva">
+        <img class="footer-cultura-img" style="height: 140px;" src="{{ site.baseurl }}/media/images/logos/footer/selo_cultura_viva.svg" alt="Selo Cultura Viva">
       </a>
       <a class="footer-cultura-a" href="#">
         <img class="footer-cultura-img" src="{{ site.baseurl }}/media/images/logos/footer/rede_cultura_viva.svg" alt="Rede Cultura Viva">
@@ -27,7 +27,7 @@
         <img class="footer-recursos-img" src="{{ site.baseurl }}/media/images/logos/footer/porticus.svg" alt="Porticus">
       </a>
       <a class="footer-recursos-a" href="https://communityartslab.org/" target="_blank">
-        <img class="footer-recursos-img" src="{{ site.baseurl }}/media/images/logos/footer/community_arts_logo.svg" alt="Community Arts Lab">
+        <img class="footer-recursos-img" style="margin-top: 40px; margin-bottom: 20px;" src="{{ site.baseurl }}/media/images/logos/footer/community_arts_logo.svg" alt="Community Arts Lab">
       </a>
       <a class="footer-recursos-a" href="https://www.fordfoundation.org/" target="_blank">
         <img class="footer-recursos-img" src="{{ site.baseurl }}/media/images/logos/ford_black.svg" alt="Ford Foundation">
