feat: novas logos sobre

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,13 +2,13 @@
   <div class="footer">
 
     <div class="footer-cultura-wrapper">
-      <a class="footer-cultura-a" href="#">
+      <a class="footer-cultura-a" href="https://culturaviva.cultura.gov.br/">
         <img class="footer-cultura-img" style="height: 140px;" src="{{ site.baseurl }}/media/images/logos/footer/selo_cultura_viva.svg" alt="Selo Cultura Viva">
       </a>
-      <a class="footer-cultura-a" href="#">
+      <a class="footer-cultura-a" href="https://culturaviva.cultura.gov.br/">
         <img class="footer-cultura-img" src="{{ site.baseurl }}/media/images/logos/footer/rede_cultura_viva.svg" alt="Rede Cultura Viva">
       </a>
-      <a class="footer-cultura-a" href="#">
+      <a class="footer-cultura-a" href="https://www.gov.br/cultura/pt-br/assuntos/politica-nacional-aldir-blanc">
         <img class="footer-cultura-img" src="{{ site.baseurl }}/media/images/logos/footer/pnab.svg" alt="Política Nacional PNAB">
       </a>
     </div>
